--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@google/genai": "^1.42.0",
+    "@dodopayments/nextjs": "^0.3.4",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.97.0",
     "clsx": "^2.1.1",
@@ -17,9 +17,12 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
+    "ngrok": "^5.0.0-beta.2",
+    "openai": "^6.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "standardwebhooks": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
